# zephyr-custom-stm32u575-board

./: .gitignore  CMakeLists.txt  README.md  app.overlay
boards/stm32u575vgtx_custom/: Kconfig.stm32u575vgtx_custom  board.cmake  board.yml  stm32u575vgtx_custom-common.dtsi  stm32u575vgtx_custom.dts  stm32u575vgtx_custom.yaml
boards/stm32u575vgtx_custom/support/: openocd.cfg
debug/: launch.json
fs_littefs/: CMakeLists.txt  app.overlay  fs.conf  prj.conf  usb.conf
fs_littefs/include/: adxl343_accelerometer.h  analog_temp_test.h  sensor_sht40_test.h
fs_littefs/src/: main.c  sensor_sht40_test.c
src/: adxl343_accelerometer.c  analog_temp_test.c
